#5: add run configurations

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -4,6 +4,6 @@
     "unknown": "unknown",
     "@unknown": {},
   
-    "app_title": "noted.",
+    "app_title": "Currency Converter",
     "@app_title": {}
 }
