#19: add settings screen and navigation test

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -1,9 +1,10 @@
 {
     "@@locale": "en",
-
     "unknown": "unknown",
-    "@unknown": {},
-  
     "app_title": "Currency Converter",
-    "@app_title": {}
+
+    "settings": "Settings",
+    "settings_favorites": "Favorites",
+
+    "test": "Test"
 }
