#19: add card expanded functionality

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -6,5 +6,9 @@
     "settings": "Settings",
     "settings_favorites": "Favorites",
 
+    "currencyCard_favorite": "Favorite",
+    "currencyCard_unfavorite": "Unfavorite",
+    "currencyCard_remove": "Remove",
+
     "test": "Test"
 }
