#19: update to UI 1.0.5

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -9,6 +9,7 @@
     "currencyCard_favorite": "Favorite",
     "currencyCard_unfavorite": "Unfavorite",
     "currencyCard_remove": "Remove",
+    "currencyCard_error_history": "We encountered an error trying to fetch the currency history. Please check your internet connection and try again!",
 
     "test": "Test"
 }
