--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -8,24 +8,24 @@
 
     "home_baseCurrency": "Base Currency",
     "home_converted": "Converted",
-    "home_refreshed": "refreshed {date} at {time}",
     "home_refresh": "Refresh",
+    "home_refreshed": "Refreshed on {date} at {time}",
     "@home_refreshed": {
         "placeholders": {
             "date": {
                 "type": "String",
-                "example": "today"
+                "example": "Jan 1"
             },
             "time": {
                 "type": "String",
-                "example": "12:00"
+                "example": "16:30"
             }
         }
     },
     "home_today": "today",
     "home_yesterday": "yesterday",
     "home_error_getConfiguration": "Failed to fetch the most recent configuration. Using the default configuration.",
-    "home_error_getExchange": "Failed to load current exchange rates. Please check your internet connection and try again.",
+    "home_error_getExchangeRate": "Failed to load current exchange rates. Please check your internet connection and try again.",
 
     "currencyCard_favorite": "Favorite",
     "currencyCard_unfavorite": "Unfavorite",
