--- a/lib/ui/util/localization/app_ko.arb
+++ b/lib/ui/util/localization/app_ko.arb
@@ -25,6 +25,8 @@
     "settings_error_getLanguage": "Failed to fetch the current language. Using the default language.",
     "settings_error_saveLanguage": "Failed to save language.",
 
+    "favorites": "Favorites",
+    "favorites_error_empty": "Could not find any currencies. Please ensure that you're searching by ISO 4217 currency code (ie: \"USD\", \"EUR\", etc.) and try again.",
     "favorites_error_getFavorites": "Failed to load favorites. Please note that favorites functionality may be unavailable.",
     "favorites_error_getCurrencies": "Failed to load currencies. Using the default currency list.",
     "favorites_error_saveFavorite": "Failed to save favorites.",
