--- a/lib/ui/util/localization/app_ko.arb
+++ b/lib/ui/util/localization/app_ko.arb
@@ -31,6 +31,8 @@
     "favorites_error_getCurrencies": "Failed to load currencies. Using the default currency list.",
     "favorites_error_saveFavorite": "Failed to save favorites.",
 
+    "theme": "Theme",
+
     "home_baseCurrency": "Base Currency",
     "home_converted": "Converted",
     "home_refresh": "Refresh",
