--- a/lib/ui/util/localization/app_ko.arb
+++ b/lib/ui/util/localization/app_ko.arb
@@ -31,6 +31,28 @@
     "favorites_error_getCurrencies": "Failed to load currencies. Using the default currency list.",
     "favorites_error_saveFavorite": "Failed to save favorites.",
 
+    "theme": "Theme",
+    "theme_headerFonts": "Header Fonts",
+    "theme_bodyFonts": "Body Fonts",
+    "theme_colorsTitle": "{colors, select, light{Light} dark{Dark} blue{Blue} green{Green} other{Unknown}}",
+    "@theme_colorsTitle": {
+        "placeholders": {
+            "colors": {
+                "type": "String",
+                "example": "light"
+            }
+        }
+    },
+    "theme_fontTitle": "{font, select, abrilFatface{Abril Fatface} poppins{Poppins} playfairDisplay{Playfair Display} other{Unknown}}",
+    "@theme_fontTitle": {
+        "placeholders": {
+            "font": {
+                "type": "String",
+                "example": "poppins"
+            }
+        }
+    },
+
     "home_baseCurrency": "Base Currency",
     "home_converted": "Converted",
     "home_refresh": "Refresh",
